--- a/trunk/general/TDLIB/Interface/DICT/Model/dict_education_newai.ini
+++ b/trunk/general/TDLIB/Interface/DICT/Model/dict_education_newai.ini
@@ -1,20 +1,19 @@
-
 [init_default]
 tablename = dict_education
 tabletitle = listdict_education
 tablewidth = 100%
 nullshow = 1
-
-action_model = add_default:new:n,export_default:export:x,import_default:import:i
+action_model = add_default:new:n,export_default:export:x
 row_element = view:view_default,edit:edit_default,delete:delete_array
 bottom_element = chooseall:chooseall,delete:delete_array,edit:edit_default
-action_search = 1
-;group_filter = 2:specialty:0:1
 primarykey = 0
 uniquekey = 0
+action_search = 1
 showlistfieldlist = 1
 showlistnull = null
 showlistfieldfilter = input
+showlistfieldstopedit = 博士:硕士:学士
+showlistfieldstopdelete = 博士:硕士:学士
 
 [init_customer]
 tablename = dict_education
@@ -22,23 +21,22 @@ tabletitle = listdict_education
 tablewidth = 100%
 nullshow = 1
 row_element = view:view_default
-
 action_search = 1
 primarykey = 0
 uniquekey = 0
 showlistfieldlist = 1
-showlistnull = null
+showlistnull = 
 showlistfieldfilter = input
 
 [delete_array]
 tablename = dict_education
 primarykey = 0
-returnmodel = init_default 
+returnmodel = init_default
 
 [export_default]
 tablename = dict_education
 tabletitle = exportdict_education
-returnmodel = init_default 
+returnmodel = init_default
 primarykey = 0
 showlistfieldlist = 0,1
 showlistfieldfilter = input,input
@@ -46,7 +44,7 @@ showlistfieldfilter = input,input
 [import_default]
 tablename = dict_education
 tabletitle = importdict_education
-returnmodel = import_default 
+returnmodel = import_default
 primarykey = 0
 action_import_key = 0
 showlistfieldlist = 0,1
@@ -60,7 +58,7 @@ primarykey = 0
 uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1
-showlistnull = null
+showlistnull = 
 showlistfieldfilter = input
 
 [edit_default]
@@ -71,7 +69,7 @@ primarykey = 0
 uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1
-showlistnull = null
+showlistnull = 
 showlistfieldfilter = input
 
 [view_default]
@@ -82,7 +80,7 @@ primarykey = 0
 uniquekey = 0
 isrechecked = 0
 showlistfieldlist = 1
-showlistnull = null
+showlistnull = 
 showlistfieldfilter = input
 
 [view_customer]
@@ -93,5 +91,10 @@ primarykey = 0
 uniquekey = 0
 isrechecked = 0
 showlistfieldlist = 1
-showlistnull = null
+showlistnull = 
 showlistfieldfilter = input
+
+[exportadv_default]
+tablename = dict_education
+showlistfieldfilter = 
+
