--- a/trunk/general/TDLIB/Interface/DICT/Model/edu_nianzhi_newai.ini
+++ b/trunk/general/TDLIB/Interface/DICT/Model/edu_nianzhi_newai.ini
@@ -3,7 +3,7 @@ tablename = edu_nianzhi
 tabletitle = listedu_nianzhi
 tablewidth = 100%
 nullshow = 1
-action_model = add_default:new:n
+action_model = 
 row_element = edit:edit_default,delete:delete_array
 primarykey = 0
 uniquekey = 0
@@ -13,7 +13,8 @@ action_search = 1,2
 showlistfieldlist = 1,2
 showlistnull = null,null
 showlistfieldfilter = input,input
-
+showlistfieldstopedit = ,2:3:4
+showlistfieldstopdelete = ,2:3:4
 
 [delete_array]
 tablename = edu_nianzhi
