--- a/trunk/general/TDLIB/Interface/DICT/Model/gb_edumethod_newai.ini
+++ b/trunk/general/TDLIB/Interface/DICT/Model/gb_edumethod_newai.ini
@@ -1,20 +1,20 @@
-
 [init_default]
 tablename = gb_edumethod
 tabletitle = listgb_edumethod
 tablewidth = 100%
-nullshow = 1
 ondblclick_config = init_view
-action_model = add_default:new:n,export_default:export:x,import_default:import:i
+nullshow = 1
+action_model = add_default:new:n,export_default:export:x
 row_element = view:view_default,edit:edit_default,delete:delete_array
 bottom_element = chooseall:chooseall,delete:delete_array,edit:edit_default
-action_search = 1
-;group_filter = 2:specialty:0:1
 primarykey = 0
 uniquekey = 0
+action_search = 1
 showlistfieldlist = 1
 showlistnull = null
 showlistfieldfilter = input
+showlistfieldstopedit = 住校:走读
+showlistfieldstopdelete = 住校:走读住校:走读
 
 [init_customer]
 tablename = gb_edumethod
@@ -27,18 +27,18 @@ action_search = 1
 primarykey = 0
 uniquekey = 0
 showlistfieldlist = 1
-showlistnull = null
+showlistnull = 
 showlistfieldfilter = input
 
 [delete_array]
 tablename = gb_edumethod
 primarykey = 0
-returnmodel = init_default 
+returnmodel = init_default
 
 [export_default]
 tablename = gb_edumethod
 tabletitle = exportgb_edumethod
-returnmodel = init_default 
+returnmodel = init_default
 primarykey = 0
 showlistfieldlist = 0,1
 showlistfieldfilter = input,input
@@ -46,7 +46,7 @@ showlistfieldfilter = input,input
 [import_default]
 tablename = gb_edumethod
 tabletitle = importgb_edumethod
-returnmodel = import_default 
+returnmodel = import_default
 primarykey = 0
 action_import_key = 0
 showlistfieldlist = 0,1
@@ -60,7 +60,7 @@ primarykey = 0
 uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1
-showlistnull = null
+showlistnull = 
 showlistfieldfilter = input
 
 [edit_default]
@@ -71,7 +71,7 @@ primarykey = 0
 uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1
-showlistnull = null
+showlistnull = 
 showlistfieldfilter = input
 
 [view_default]
@@ -82,7 +82,7 @@ primarykey = 0
 uniquekey = 0
 isrechecked = 0
 showlistfieldlist = 1
-showlistnull = null
+showlistnull = 
 showlistfieldfilter = input
 
 [view_customer]
@@ -93,5 +93,10 @@ primarykey = 0
 uniquekey = 0
 isrechecked = 0
 showlistfieldlist = 1
-showlistnull = null
+showlistnull = 
 showlistfieldfilter = input
+
+[exportadv_default]
+tablename = gb_edumethod
+showlistfieldfilter = 
+
