--- a/trunk/general/TDLIB/Interface/XinZhengGuanLi/Model/dict_coursegroup_newai.ini
+++ b/trunk/general/TDLIB/Interface/XinZhengGuanLi/Model/dict_coursegroup_newai.ini
@@ -1,32 +1,31 @@
-
 [init_default]
 tablename = dict_coursegroup
 tabletitle = listdict_coursegroup
 tablewidth = 100%
 nullshow = 1
-;ondblclick_config = init_view
-action_model = add_default:new:n,export_default:export:x,import_default:import:i
+action_model = add_default:new:n,export_default:export:x
 row_element = view:view_default,edit:edit_default,delete:delete_array
 bottom_element = chooseall:chooseall,delete:delete_array,edit:edit_default
-action_search = 1
-;group_filter = 2:specialty:0:1
-systemorder = 0:desc
-pagenums_model = 25
 primarykey = 0
 uniquekey = 0
+systemorder = 0:desc
+pagenums_model = 25
+action_search = 1
 showlistfieldlist = 1
 showlistnull = null
 showlistfieldfilter = input
+showlistfieldstopedit = Ñ¡ÐÞ¿Î:±ØÐÞ¿Î
+showlistfieldstopdelete = Ñ¡ÐÞ¿Î:±ØÐÞ¿Î
 
 [delete_array]
 tablename = dict_coursegroup
 primarykey = 0
-returnmodel = init_default 
+returnmodel = init_default
 
 [export_default]
 tablename = dict_coursegroup
 tabletitle = exportdict_coursegroup
-returnmodel = init_default 
+returnmodel = init_default
 primarykey = 0
 showlistfieldlist = 0,1
 showlistfieldfilter = input,input
@@ -34,7 +33,7 @@ showlistfieldfilter = input,input
 [import_default]
 tablename = dict_coursegroup
 tabletitle = importdict_coursegroup
-returnmodel = init_default 
+returnmodel = init_default
 primarykey = 0
 action_import_key = 0
 showlistfieldlist = 0,1
@@ -48,7 +47,7 @@ primarykey = 0
 uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1
-showlistnull = null
+showlistnull = 
 showlistfieldfilter = input
 
 [edit_default]
@@ -59,7 +58,7 @@ primarykey = 0
 uniquekey = 0
 returnmodel = init_default
 showlistfieldlist = 1
-showlistnull = null
+showlistnull = 
 showlistfieldfilter = input
 
 [view_default]
@@ -70,6 +69,10 @@ primarykey = 0
 uniquekey = 0
 isrechecked = 0
 showlistfieldlist = 1
-showlistnull = null
+showlistnull = 
 showlistfieldfilter = input
+
+[exportadv_default]
+tablename = dict_coursegroup
+showlistfieldfilter = 
 
